modify about section

--- a/data/profile.toml
+++ b/data/profile.toml
@@ -1,6 +1,6 @@
 section = "About"
-tag = "Student | Developer"
-description = "I'm Anurag Kar, currently a student in IIITDM Kacheepuram, Chennai pursuing B.tech in Smart Manufacturing. I'm passionate about Science and Technology and love to work for the growth and developement of it."
+tag = "Student | Backend Developer"
+description = "Welcome to my website! I'm Anurag Kar, a passionate Backend Developer with a talent for optimizing algorithms and building high-quality products. With experience in Python, Golang, and various libraries/frameworks, as well as system administration and cloud computing, I'm always exploring new ways to solve problems and create value for my team and clients. On this website, you'll find information about my education, work experience, and skills, as well as examples of my projects and volunteer work. Thanks for stopping by, and please don't hesitate to get in touch if you have any questions or opportunities to collaborate!"
 description2 = "Backend Development, Python, Linux, Cloud, DevOps/SRE"
 description3 = "Art, Football, Astronomy"
 location = "Chennai, India"
